[package]
name = "fsz"
version = "0.3.0"
edition = "2024"
description = "Simple file size by pattern"
license = "MIT OR Apache-2.0"  # or license-file = "LICENSE"
repository = "https://github.com/mohammedamer/size"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fsz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
walkdir = "2.5.0"
